--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -728,12 +728,12 @@ h5, .h5 {
   margin-top: -10rem;
 }
 
-.mb-20 {
-  margin-bottom: 5rem;
+.mb-2 {
+  margin-bottom: 0.5rem;
 }
 
-.mb-3 {
-  margin-bottom: 0.75rem;
+.mb-20 {
+  margin-bottom: 5rem;
 }
 
 .mb-3\.5 {
@@ -776,16 +776,28 @@ h5, .h5 {
   margin-top: 0.375rem;
 }
 
-.mb-1 {
-  margin-bottom: 0.25rem;
-}
-
-.mb-2 {
-  margin-bottom: 0.5rem;
-}
-
 .mt-3 {
   margin-top: 0.75rem;
+}
+
+.mt-\[-11px\] {
+  margin-top: -11px;
+}
+
+.mr-14 {
+  margin-right: 3.5rem;
+}
+
+.mr-12 {
+  margin-right: 3rem;
+}
+
+.mr-5 {
+  margin-right: 1.25rem;
+}
+
+.block {
+  display: block;
 }
 
 .flex {
@@ -869,8 +881,19 @@ h5, .h5 {
   max-width: 32rem;
 }
 
-.max-w-md {
-  max-width: 28rem;
+.translate-x-2 {
+  --tw-translate-x: 0.5rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.translate-y-2 {
+  --tw-translate-y: 0.5rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.translate-y-1\.5 {
+  --tw-translate-y: 0.375rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .rotate-\[-20deg\] {
@@ -963,13 +986,14 @@ h5, .h5 {
      object-fit: cover;
 }
 
-.p-3 {
-  padding: 0.75rem;
-}
-
 .px-3 {
   padding-left: 0.75rem;
   padding-right: 0.75rem;
+}
+
+.px-5 {
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
 }
 
 .px-6 {
@@ -980,11 +1004,6 @@ h5, .h5 {
 .py-3 {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
-}
-
-.px-5 {
-  padding-left: 1.25rem;
-  padding-right: 1.25rem;
 }
 
 .pb-1 {
@@ -1015,12 +1034,16 @@ h5, .h5 {
   font-family: "Press Start 2P";
 }
 
-.text-\[18px\] {
-  font-size: 18px;
+.text-\[20px\] {
+  font-size: 20px;
 }
 
 .text-micro {
   font-size: clamp(0.875rem, 1.25vw, 1rem);
+}
+
+.text-\[18px\] {
+  font-size: 18px;
 }
 
 .uppercase {
@@ -1555,6 +1578,14 @@ body {
     margin-right: 1.25rem;
   }
 
+  .-md\:mr-3 {
+    margin-right: 0.75rem;
+  }
+
+  .-md\:mr-2\.5 {
+    margin-right: 0.625rem;
+  }
+
   .-md\:hidden {
     display: none;
   }
@@ -1565,6 +1596,33 @@ body {
 
   .-md\:max-w-lg {
     max-width: 32rem;
+  }
+
+  .-md\:max-w-7 {
+    max-width: 1.75rem;
+  }
+
+  .-md\:max-w-8 {
+    max-width: 2rem;
+  }
+
+  .-md\:max-w-9 {
+    max-width: 2.25rem;
+  }
+
+  .-md\:translate-y-2 {
+    --tw-translate-y: 0.5rem;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  }
+
+  .-md\:translate-y-3 {
+    --tw-translate-y: 0.75rem;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  }
+
+  .-md\:translate-y-2\.5 {
+    --tw-translate-y: 0.625rem;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   }
 
   .-md\:flex-col {
